为index添加overflow属性避免IE bug带来的问题

--- a/HTML-YanShiba/images/index.css
+++ b/HTML-YanShiba/images/index.css
@@ -167,6 +167,7 @@
     clear: both;
     width: 0px;
     height: 0px;
+    overflow: hidden;   /*用来解决IE小像素div出现的bug*/
 }
 
 #footer ul {
